Adjusted some styling for better readability Added more project details Fix image controls showing for projects with no images Fix homepage Skills Search functionality Fix Skills search box styling (WIP) Fix homepage SkillsList changing height on results change Remove unneeded comments

--- a/src/styles/Education.module.css
+++ b/src/styles/Education.module.css
@@ -11,6 +11,7 @@
     & details {
         padding: 1rem;
         background-color: var(--color-accent-2);
+        color: white; /* TODO: Update upon new color scheme */
     }
 
     & details[open] summary {
